minor spacing fix for product modal

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -188,6 +188,6 @@
 @media (max-width: 360px) {
     .product-modal {
         width: 90%;
-        left: 5%;
+        left: 4%;
     }
 }
